--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,12 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="UTF-8">
-  <title>HPE - Intelligent Venues</title>
+  <title>HPE</title>
   <meta name="description" content="" />
   <meta name="fragment" content="!" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="Description" content="HPE is helping stadiums, theme parks and cultural institutions turn visitors into super fans.">
-  <meta name="Keywords" content="HPE, Intelligent Venues">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@hpe" />
-  <meta name="twitter:creator" content="@hpe" />
-  <meta property="og:title" content="HPE - Intelligent Venues">
-  <meta property="og:image" content="http://intelligent-venues.grommet.io/img/hpe-intelligent-venues.jpg">
-  <meta property="og:site_name" content="HPE - Intelligent Venues">
-  <meta property="og:url" content="http://intelligent-venues.grommet.io/">
-  <meta property="og:description" content="HPE is helping stadiums, theme parks and cultural institutions turn visitors into super fans.">
-  <meta property="fb:app_id" content="644917472326322">
-  <meta property="og:type" content="website">
+  <meta name="Keywords" content="HPE">
   <link rel="shortcut icon" href="/img/favicon.ico" />
   <link href='/index.min.css?v0.01' rel='stylesheet' type='text/css'>
   <style>
