Header adjustments. Updated animations.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>HPE</title>
   <meta name="description" content="" />
   <meta name="fragment" content="!" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="Keywords" content="HPE">
   <link rel="shortcut icon" href="/img/favicon.ico" />
