--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta charset="UTF-8">
-  <title>HPE</title>
+  <title>Grommet - Contextual Immersion Infographic</title>
   <meta name="description" content="" />
   <meta name="fragment" content="!" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="Keywords" content="HPE">
   <link rel="shortcut icon" href="/img/favicon.ico" />
-  <link href='/index.min.css?v0.06' rel='stylesheet' type='text/css'>
+  <link href='/index.min.css?v0.01' rel='stylesheet' type='text/css'>
   <style>
   body.loading {margin: 0px; width: 100vw; height: 100vh;
     background-image: radial-gradient(circle at 50% 15%, #fff, #fff 30%, #ccc);
